--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
-
-body {
+.body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
+
 .header {
     background-color: #f2f2f2;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
 }
+
 .logo {
-    width: 100px; /* Adjust size as needed */
-    height: auto;
+    max-width: 100px; \
 }
+
 .buttons {
     display: flex;
+    align-items: center; 
 }
+
 .button {
     margin-right: 10px;
     padding: 8px 15px;
@@ -29,9 +31,11 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
 .button:hover {
     background-color: #45a049;
 }
+
 .navbar {
     background-color: #333;
     overflow: hidden;
@@ -91,9 +95,10 @@ body {
 }
 .flex-item {
     flex: 0 0 30%;
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
     padding: 10px;
     text-align: center;
+    border-radius: 10px;
 }
 .flex-item img {
     width: 100%;
@@ -104,13 +109,14 @@ body {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px; /* Adjust max-width as needed */
-    padding: 0 20px; /* Adjust padding as needed */
+    max-width: 800px; 
+    padding: 0 20px; 
 }
 
 .programmes-offered {
     text-align: center;
     margin-top: 20px;
+    
 }
 
 .programmes-offered h2 {
@@ -127,6 +133,7 @@ body {
     border: 1px solid #ddd;
     padding: 10px;
     text-align: center;
+    border-radius: 20px;
 }
 
 footer {
